# adriane-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  eslint.config.mjs  llms.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  vitest.config.ts  vitest.workspace.ts
.cursor/rules/: 000-global.mdc  010-architecture.mdc  020-typescript.mdc  030-graph-core.mdc  040-runtime.mdc  070-testing.mdc  080-security.mdc  090-ai-agents.mdc
.github/: dependabot.yml
.github/workflows/: codeql.yml  coverage.yml  docs.yml  release.yml  rust.yml  security.yml  unit.yml
crates/: .gitignore  Cargo.toml  README.md
crates/adriane-cli/: Cargo.toml
crates/adriane-cli/src/: main.rs
crates/agents-core/: Cargo.toml
crates/agents-core/src/: brain.rs  fs_tools.rs  lib.rs  memory.rs  memory_tools.rs  middleware.rs  node.rs  plan_execute.rs  react.rs  reflection.rs  skill_middleware.rs  structured_output.rs  supervisor.rs  todos.rs  tools.rs  working_memory.rs
crates/approval-engine/: Cargo.toml
crates/approval-engine/src/: attestation.rs  engine.rs  error.rs  lib.rs  types.rs
crates/artifact-store/: Cargo.toml
crates/artifact-store/src/: in_memory_artifact_store.rs  interfaces.rs  lib.rs  types.rs
crates/bindings/: Cargo.toml  README.md  index.d.ts  index.js  package.json  smoke.cjs
crates/bindings/npm/darwin-arm64/: README.md  package.json
crates/bindings/npm/darwin-x64/: README.md  package.json
crates/bindings/npm/linux-arm64-gnu/: NOTICE  README.md  package.json
crates/bindings/npm/linux-x64-gnu/: README.md  package.json
crates/bindings/npm/win32-x64-msvc/: README.md  package.json
crates/bindings/src/: bridge.rs  lib.rs  spec.rs
crates/c-api/: Cargo.toml  README.md
crates/c-api/include/: adriane.h
crates/c-api/src/: lib.rs
crates/callbacks/: Cargo.toml
crates/callbacks/src/: error.rs  handlers.rs  interfaces.rs  lib.rs  manager.rs  types.rs
crates/components/: Cargo.toml
crates/components/src/: components.rs  error.rs  lib.rs  prebuilt.rs
crates/config/: Cargo.toml
crates/config/src/: env.rs  errors.rs  feature_flags.rs  lib.rs
crates/fs-backend/: Cargo.toml
crates/fs-backend/src/: artifact_backend.rs  backend.rs  edits.rs  http_backend.rs  lib.rs  path.rs  policy.rs  types.rs
crates/graph-adriane/: Cargo.toml
crates/graph-adriane/src/: ast.rs  compiler.rs  lib.rs  parser.rs  transformer.rs  validator.rs
crates/graph-core/: Cargo.toml
crates/graph-core/src/: error.rs  ids.rs  lib.rs  types.rs  validator.rs
crates/graph-runtime/: Cargo.toml
crates/graph-runtime/src/: interfaces.rs  lib.rs  runtime.rs  types.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: lib.rs
crates/lang-adriane/: Cargo.toml
crates/lang-adriane/src/: ast.rs  compiler.rs  lib.rs  parser.rs  transformer.rs  validator.rs
crates/llm-gateway/: Cargo.toml
crates/llm-gateway/src/: anthropic.rs  compressor.rs  cross_encoder.rs  error.rs  gateway.rs  gemini.rs  lib.rs  media_resolver.rs  mock.rs  model_policy.rs  openai_compatible.rs  redactor.rs  replay_journal.rs  secrets_redactor.rs  sse.rs  types.rs
crates/memory/: Cargo.toml
crates/memory-store/: Cargo.toml
crates/memory-store/src/: in_memory_store.rs  interfaces.rs  lib.rs  types.rs
crates/memory/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: in_memory_metric_collector.rs  in_memory_observability_bus.rs  in_memory_tracer.rs  interfaces.rs  lib.rs  time.rs  types.rs
crates/okf/: Cargo.toml
crates/okf/src/: lib.rs
crates/py-bindings/: Cargo.toml  build.rs
crates/py-bindings/src/: core.rs  lib.rs
crates/rag-pipeline/: Cargo.toml
crates/rag-pipeline/src/: embeddings.rs  error.rs  lib.rs  loaders.rs  pipeline.rs  reranker.rs  retriever.rs  splitters.rs  types.rs  vector_store.rs
crates/runnable/: Cargo.toml
crates/runnable/src/: error.rs  lambda.rs  lib.rs  parallel.rs  passthrough.rs  runnable.rs  sequence.rs
crates/runtime-bridge/: Cargo.toml
crates/runtime-bridge/src/: lib.rs  spec.rs  tool_journal.rs
crates/sdk-core/: Cargo.toml
crates/sdk-core/src/: lib.rs
crates/skills/: Cargo.toml
crates/skills/src/: lib.rs
docs/: README.md  architecture.md  cli.md  getting-started.md
docs-site/: .gitignore  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-site/docs/: glossary.md  roadmap.md
docs-site/static/: llms-full.txt
docs/adr/: 0001-keep-typescript-engine.md  0002-migrate-engine-to-rust.md  0003-ts-engine-deprecated-sdk-on-rust.md  0004-approval-enforcement-on-rust-golden-path.md  0005-multi-provider-llm-gateway.md  0006-sovereign-deployment-and-kb-permissions.md  0007-tool-connectors-oauth-mcp.md  0008-pii-redaction-and-anonymization.md  0008-rust-runtime-parity-fanout-subgraphs-streaming.md  0009-clerk-auth-identity.md  0009-durable-timers-and-external-signals.md  0010-admin-managed-config-secrets.md  0011-resource-search.md  0012-ai-alliance-tapestry-positioning.md  0013-llm-council-governed-deliberation.md  0014-engine-token-efficiency.md  0015-rust-runtime-parity-fanout-subgraphs-streaming.md  0016-rust-only-sdk-no-ts-fallback.md  0017-fanout-sdk-builder.md  0018-model-tiering-policy.md  0019-reflection-structured-critique.md  0020-polyglot-sdk-seam.md  0021-opentelemetry-export-seam.md  0022-deep-agent-harness-gap.md  0023-governed-deep-agent-platform-landscape.md  0024-governed-virtual-filesystem-seam.md  0025-unified-agent-middleware-api.md  0026-memory-architecture-engine-studio.md  0027-async-subagents-and-streaming.md  0028-observability-otel-cost.md  0029-governed-structured-output.md  0030-multimodal-input.md  0031-per-model-provider-packages.md  0032-secrets-redaction-and-no-log.md  0033-token-streaming-and-subagent-tagging.md  0034-model-surface-and-env-key-resolution.md  (+7 more)
python/: LICENSE  README.md  pyproject.toml
python/adriane/: __init__.py
python/adriane_ai/: __init__.py
python/tests/: test_adriane.py
scripts/: build-napi.sh  build-py.sh  reserve-oss-names.sh  rust-check.sh
sdks/: README.md
(+166 files in other folders)
