[package]
name = "adriane-cli"
description = "Adriane CLI: compile, run and inspect graphs via the Rust engine."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "adriane"
path = "src/main.rs"

[dependencies]
adriane-graph-core = { path = "../graph-core" }
adriane-graph-runtime = { path = "../graph-runtime" }
adriane-graph-adriane = { path = "../graph-adriane" }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
