[package]
name = "adriane-agents-core"
description = "Agent patterns over the runtime — ReAct loop, tools, approval gating (Rust port of @adriane-ai/agents-core)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
adriane-graph-runtime = { path = "../graph-runtime" }
adriane-llm-gateway = { path = "../llm-gateway" }
adriane-fs-backend = { path = "../fs-backend" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[dev-dependencies]
adriane-artifact-store = { path = "../artifact-store" }
tokio = { version = "1", features = ["rt", "macros"] }
