[package]
name = "adriane-agents-core"
description = "Agent patterns over the runtime — ReAct loop, tools, approval gating (Rust port of @adriane-ai/agents-core)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
adriane-graph-runtime = { path = "../graph-runtime" }
adriane-llm-gateway = { path = "../llm-gateway" }
adriane-fs-backend = { path = "../fs-backend" }
adriane-memory = { path = "../memory" }
adriane-skills = { path = "../skills" }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
# ADR 0029: real nested/enum/format JSON-Schema conformance for structured output.
# default-features = false drops HTTP/file `$ref` resolution — we only validate
# self-contained schemas, so this stays lean and avoids `$ref`-driven SSRF.
jsonschema = { version = "0.47", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[dev-dependencies]
adriane-artifact-store = { path = "../artifact-store" }
tokio = { version = "1", features = ["rt", "macros"] }
