[package]
name = "adriane-approval-engine"
description = "Human-approval gates with tamper-evident Ed25519 attestation (Rust port of @adriane/approval-engine)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
base64 = "0.22"
