[package]
name = "adriane-napi"
description = "Node (napi-rs) bindings exposing the Rust engine to the TypeScript SDK."
version.workspace = true
edition.workspace = true
license.workspace = true
# Distributed as the npm package @adriane-ai/napi (prebuilt per-platform .node), never
# to crates.io — keep `cargo publish` from pushing it.
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
adriane-graph-core = { path = "../graph-core" }
adriane-graph-adriane = { path = "../graph-adriane" }
adriane-graph-runtime = { path = "../graph-runtime" }
adriane-agents-core = { path = "../agents-core" }
adriane-approval-engine = { path = "../approval-engine" }
adriane-artifact-store = { path = "../artifact-store" }
adriane-components = { path = "../components" }
adriane-fs-backend = { path = "../fs-backend" }
adriane-llm-gateway = { path = "../llm-gateway" }
napi = { version = "2", default-features = false, features = ["napi8", "async", "tokio_rt"] }
napi-derive = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
napi-build = "2"
