[package]
name = "adriane-napi"
description = "Node (napi-rs) bindings exposing the Rust engine to the TypeScript SDK."
version.workspace = true
edition.workspace = true
license.workspace = true
# Distributed as the npm package @adriane-ai/napi (prebuilt per-platform .node), never
# to crates.io — keep `cargo publish` from pushing it.
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
adriane-graph-core = { path = "../graph-core" }
adriane-graph-adriane = { path = "../graph-adriane" }
adriane-graph-runtime = { path = "../graph-runtime" }
adriane-agents-core = { path = "../agents-core" }
adriane-approval-engine = { path = "../approval-engine" }
adriane-artifact-store = { path = "../artifact-store" }
adriane-components = { path = "../components" }
adriane-fs-backend = { path = "../fs-backend", features = ["http"] }
adriane-llm-gateway = { path = "../llm-gateway" }
adriane-memory = { path = "../memory" }
adriane-runtime-bridge = { path = "../runtime-bridge" }
adriane-skills = { path = "../skills" }
async-trait = "0.1"
# `dyn-symbols` (on by default in napi 3, but we disable defaults to pin the N-API
# version) resolves the N-API host symbols dynamically via libloading at runtime
# instead of as link-time externs — so the cdylib loads them from the Node host AND
# the crate's own `cargo test` binary links cleanly outside Node (napi 2 did not gate
# this behind a feature; napi 3 does).
napi = { version = "3", default-features = false, features = ["napi8", "async", "tokio_rt", "dyn-symbols"] }
napi-derive = "3"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[build-dependencies]
napi-build = "2"
