[package]
name = "adriane-c-api"
description = "Stable C ABI over the Adriane Rust engine for thin polyglot SDKs."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "adriane_c_api"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
adriane-sdk-core = { path = "../sdk-core" }
