[package]
name = "adriane-callbacks"
description = "Callback manager and lifecycle events (Rust port of @adriane/callbacks)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
