[package]
name = "adriane-components"
description = "Reusable graph components + prebuilt micro-task agents over the Adriane engine (compute components, agent definitions, capability-tier aware)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
adriane-graph-runtime = { path = "../graph-runtime" }
adriane-agents-core = { path = "../agents-core" }
adriane-llm-gateway = { path = "../llm-gateway" }
adriane-rag-pipeline = { path = "../rag-pipeline" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
