[package]
name = "adriane-graph-adriane"
description = "Adriane DSL compiler: graph YAML -> GraphDefinition (Rust port of @adriane/graph-adriane)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
