[package]
name = "adriane-graph-core"
description = "Pure graph data model for Adriane (Rust port of @adriane/graph-core)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
