[package]
name = "adriane-graph-runtime"
description = "Execution engine over a validated GraphDefinition (Rust port of @adriane/graph-runtime)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
