[package]
name = "adriane-graph-runtime"
description = "Execution engine over a validated GraphDefinition (Rust port of @adriane-ai/graph-runtime)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# `join_all` for concurrent fan-out branches. Executor-agnostic (no tokio): the
# crate stays async-runtime-agnostic — the embedder's executor drives the futures.
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
