[package]
name = "adriane-lang-adriane"
description = "Prompt/agent/chain DSL compiler (Rust port of @adriane-ai/lang-adriane)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
