[package]
name = "adriane-observability"
description = "Rust port of @adriane/observability."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
adriane-graph-core = { path = "../graph-core" }
adriane-graph-runtime = { path = "../graph-runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
