[package]
name = "adriane-py"
description = "Python bindings (pyo3) over the Rust engine."
version.workspace = true
edition.workspace = true
license.workspace = true
# Distributed as the PyPI package `adriane-ai` (import package `adriane_ai`,
# maturin abi3 wheels), never to crates.io — keep `cargo publish` from pushing it.
publish = false

[lib]
name = "adriane"
# `cdylib` is the importable extension module. `rlib` lets `cargo test` build a
# standalone test harness against the crate. The pyo3 entry points (`#[pymodule]` /
# `#[pyfunction]`) are `#[cfg(not(test))]`-gated, so the test binary never references
# CPython symbols and runs without an interpreter or libpython linkage; the tests
# exercise the pure-Rust core functions the wrappers delegate to.
crate-type = ["cdylib", "rlib"]

[dependencies]
adriane-sdk-core = { path = "../sdk-core" }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
