[package]
name = "adriane-runtime-bridge"
description = "Shared callback-capable runtime bridge used by N-API and the C ABI."
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
adriane-agents-core = { path = "../agents-core" }
adriane-approval-engine = { path = "../approval-engine" }
adriane-artifact-store = { path = "../artifact-store" }
adriane-components = { path = "../components" }
adriane-fs-backend = { path = "../fs-backend", features = ["http"] }
adriane-graph-core = { path = "../graph-core" }
adriane-graph-runtime = { path = "../graph-runtime" }
adriane-llm-gateway = { path = "../llm-gateway" }
adriane-memory = { path = "../memory" }
adriane-skills = { path = "../skills" }
async-trait = "0.1"
serde = { workspace = true }
sha2 = "0.10"
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
